# xvision

./: .coverage-thresholds.json  .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  BACKEND_AUDIT_2026-05-13.md  CHANGELOG.md  CLAUDE.md  CREDITS.md  Cargo.toml  Dockerfile  Dockerfile.deploy  FOLLOWUPS.md  MANUAL.md  PRODUCT.md  QA_TRACKER.md  README.md  ROADMAP.md  agent-conductor.config.json  agent-conductor.config.ts  architecture-diagram.mermaid  architecture.md  docker-compose.yml  implementation-plan-python-archive.md  implementation-plan.md  qa-xvision-30day-eval.md  rustfmt.toml  steering-vector-architecture.md  v1-build-steps.md  v1-shipping-plan.md
crates/xianvec-cli/: Cargo.toml
crates/xianvec-cli/src/: lib.rs  main.rs
crates/xianvec-cli/tests/: strategy_cli.rs
crates/xianvec-core/: Cargo.toml
crates/xianvec-core/migrations/: 0001_init.sql  0002_rename_setup_to_cycle.sql
crates/xianvec-core/src/: config.rs  lib.rs  market.rs  store.rs  substrate.rs  trading.rs
crates/xianvec-data/: Cargo.toml
crates/xianvec-data/src/: fixtures.rs  indicators.rs  lib.rs
crates/xianvec-engine/: Cargo.toml  README.md
crates/xianvec-engine/src/: lib.rs  tokens.rs
crates/xianvec-engine/tests/: agent_slot.rs  bundle_roundtrip.rs  bundle_store.rs  llm_dispatch.rs  ma_crossover_shim.rs  pipeline_inline.rs  template_validation.rs  tokens.rs  tool_registry.rs
crates/xianvec-eval/: Cargo.toml
crates/xianvec-eval/src/: ab_compare.rs  algorithm.rs  backtest.rs  gate.rs  harness.rs  lib.rs  metrics.rs  report.rs  result.rs  strategy.rs
crates/xianvec-execution/: Cargo.toml
crates/xianvec-execution/src/: alpaca.rs  executor.rs  lib.rs  orderly.rs
crates/xianvec-gating/: Cargo.toml
crates/xianvec-gating/src/: lib.rs
crates/xianvec-harness/: Cargo.toml
crates/xianvec-harness/src/: lib.rs
crates/xianvec-inference/: Cargo.toml
crates/xianvec-inference/src/: engine.rs  hooks.rs  lib.rs  substrate.rs  vendor_qwen3.rs
crates/xianvec-inference/tests/: hook_fires.rs
crates/xianvec-intern/: Cargo.toml
crates/xianvec-intern/src/: backend.rs  cache.rs  lib.rs  prompt.rs  reasoning.rs
crates/xianvec-introspect/: Cargo.toml
crates/xianvec-introspect/benches/: wrap_overhead.rs
crates/xianvec-introspect/src/: lib.rs
crates/xianvec-risk/: Cargo.toml
crates/xianvec-risk/src/: lib.rs  whitelist.rs
crates/xianvec-trader/: Cargo.toml
crates/xianvec-trader/src/: backend.rs  error.rs  lib.rs  params.rs  parse.rs  prompt.rs  run.rs
crates/xvision-agent-client/: Cargo.toml
crates/xvision-agent-client/src/: client.rs  errors.rs  event_sink.rs  lib.rs  pool.rs  protocol.rs  provider_map.rs  supervisor.rs  tool_dispatch.rs  transport.rs
crates/xvision-agent-client/tests/: e2e_ohlcv_callback.rs  event_sink_smoke.rs  event_sink_v2.rs  handshake.rs  replay_load_mock.rs  session_lifecycle.rs  session_methods_mock.rs  supervisor_smoke.rs  tool_registry.rs  transport_mock.rs
crates/xvision-cli/: Cargo.toml
crates/xvision-cli/src/: exit.rs  io.rs  lib.rs  main.rs
crates/xvision-cli/tests/: agent_create.rs  agent_workbench.rs  autooptimizer_cli.rs  autooptimizer_cli_inspect.rs  autooptimizer_cli_mutate_once.rs  autooptimizer_cli_session_init.rs  autooptimizer_e2e.rs  autoresearch_cli.rs  autoresearch_cli_inspect.rs  autoresearch_cli_mutate_once.rs  autoresearch_cli_session_init.rs  autoresearch_e2e.rs  cli_surface.rs  cli_surface_snapshot.json  doctor_cli.rs  doctor_providers.rs  eod_cli.rs  eval_batch_run.rs  eval_cancel_cli.rs  eval_compare_report.rs  eval_export_cli.rs  eval_model_override_cli.rs  eval_results_report.rs  eval_validate_cli.rs  eval_watch_tokens.rs  exit_codes_ab_compare.rs  exit_codes_eval.rs  exit_codes_fire_trade.rs  exit_codes_skill.rs  exit_codes_strategy.rs  experiment_run.rs  experiment_run_scope_guardrails_cli.rs  help_cli.rs  json_stdout_contract.rs  list_output_format.rs  live_preflight_smoke.rs  marketplace_cli.rs  memory_cli.rs  model_bakeoff_cli.rs  optimize_cli.rs  (+19 more)
crates/xvision-core/: Cargo.toml
crates/xvision-core/migrations/: 0001_init.sql  0003_cycles_trace_indices.sql
crates/xvision-core/src/: agent_profiles.rs  asset_registry.rs  config.rs  lib.rs  market.rs  risk.rs  slot.rs  store.rs  trading.rs
crates/xvision-core/tests/: capital_and_risk_caps.rs
crates/xvision-dashboard/: Cargo.toml  README.md  build.rs
crates/xvision-dashboard/migrations/: 1001_dashboard_sessions.sql  1001_dashboard_sessions_down.sql
crates/xvision-dashboard/prompts/: wizard.md
crates/xvision-dashboard/src/: auth.rs  autoresearch_runner.rs  chain_config.rs  chat_unified.rs  embed.rs  error.rs  ipc.rs  lib.rs  llm_dispatch.rs  marketplace_index.rs  marketplace_nonce.rs  ratelimit.rs  redact.rs  server.rs  session_bus.rs  state.rs  wizard_loop.rs
crates/xvision-dashboard/tests/: agent_runs_blob_route.rs  agent_runs_memory_events.rs  agent_runs_stream.rs  agents_routes.rs  auth.rs  auth_session.rs  autooptimizer_sessions.rs  autoresearch_routes.rs  autoresearch_runner.rs  autoresearch_settings_routes.rs  bind_warning.rs  brokers_routes.rs  charts_annotated.rs  chat_rail_memory.rs  chat_rail_policy_projection.rs  chat_rail_routes.rs  chat_rail_safety.rs  chat_rail_unified_stream.rs  checkpoints_routes.rs  cli_jobs_allowlist.rs  cli_jobs_eval_run_bridge.rs  cli_jobs_routes.rs  cli_jobs_safety.rs  danger_challenge.rs  degen_arena_deploy_route.rs  diagnostics_routes.rs  eval_runs_cache.rs  eval_runs_multi_status.rs  eval_runs_preflight.rs  eval_runs_retry.rs  eval_runs_since.rs  flywheel_routes.rs  focus_routes.rs  http.rs  inspector_routes.rs  live_broker_auth.rs  (+21 more)
crates/xvision-data/: Cargo.toml
crates/xvision-dspy/: Cargo.toml
crates/xvision-engine/: Cargo.toml  README.md
crates/xvision-eval/: Cargo.toml
crates/xvision-execution/: Cargo.toml
crates/xvision-filters/: Cargo.toml
crates/xvision-harness/: Cargo.toml
crates/xvision-identity/: Cargo.toml
crates/xvision-intern/: Cargo.toml
crates/xvision-ipc/: Cargo.toml
crates/xvision-marketplace/: Cargo.toml
crates/xvision-mcp/: Cargo.toml
(+4412 files in other folders)
