[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

# `default-members` omits xvision-identity / xvision-marketplace as direct
# members, but since the marketplace routes landed, xvision-dashboard (a
# default member) depends on both — so bare `cargo build` / `cargo test`
# (no -p, no --workspace) now compiles the alloy v2 chain stack too. The
# marketplace routes are env-gated at runtime (dormant → 503 without
# XVN_RPC_URL etc.), so the chain stack compiles in but stays inert without
# config. Explicit `cargo test --workspace` additionally runs the identity /
# marketplace crates' own tests.
default-members = [
    "crates/xvision-agent-client",
    "crates/xvision-core",
    "crates/xvision-data",
    "crates/xvision-memory",
    "crates/xvision-execution",
    "crates/xvision-eval",
    "crates/xvision-engine",
    "crates/xvision-observability",
    "crates/xvision-cli",
    "crates/xvision-mcp",
    "crates/xvision-dashboard",
]

[workspace.package]
# Bumped per image deploy while pre-1.0. Minor is the release train
# (0.21.0 -> 0.22.0 -> ...); patch is reserved for same-train hotfixes.
# See docs/VERSIONING.md and bump via `scripts/bump-version.sh <new-version>`.
version = "0.36.0"
edition = "2021"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/latentwill/xvision"

[workspace.dependencies]
# async / runtime
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"

# serde
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.9"
garde      = { version = "0.22", features = ["derive"] }

# persistence
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono", "uuid"] }

# numerics
arrow-array  = "58.3.0"
arrow-schema = "58.3.0"
parquet      = "58.3.0"
ndarray = "0.16"

# observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# cli / http / chain
clap    = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "charset", "http2"] }
alloy   = { version = "2", features = ["full"] }

# error
thiserror = "2"
anyhow    = "1"

# misc
chrono = { version = "0.4", features = ["serde"] }
uuid   = { version = "1", features = ["v4", "serde"] }

# brokerage
apca = { version = "0.30", default-features = false, features = ["vendored-openssl"] }
# orderly-connector-rs pinned at 0.4.15 per M0 probe (probes/m0-orderly/)
orderly-connector-rs = "0.4.15"

# test / bench
proptest  = "1"
criterion = "0.8"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"

[profile.staging]
inherits      = "release"
opt-level     = 1
lto           = false
codegen-units = 256
strip         = "symbols"
