[package]
name        = "xianvec-core"
description = "types, schemas, config loader, SQLite persistence"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name = "xianvec_core"
path = "src/lib.rs"
