[package]
name        = "xianvec-data"
description = "OHLCV ingest, indicators, onchain signals"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name = "xianvec_data"
path = "src/lib.rs"

[dependencies]
xianvec-core = { path = "../xianvec-core" }
polars       = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true, features = ["serde"] }
thiserror    = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
