[package]
name        = "xianvec-eval"
description = "backtest harness, baselines, Δ-Sharpe"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name = "xianvec_eval"
path = "src/lib.rs"

[dependencies]
xianvec-core      = { path = "../xianvec-core" }
xianvec-execution = { path = "../xianvec-execution" }
xianvec-risk      = { path = "../xianvec-risk" }
rand              = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

async-trait = { workspace = true }
chrono      = { workspace = true, features = ["serde"] }
serde       = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true, features = ["serde", "v4"] }
tokio       = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
