[package]
name        = "xianvec-execution"
description = "Stage 3 — Alpaca + Orderly executors"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name = "xianvec_execution"
path = "src/lib.rs"

[dependencies]
xianvec-core = { path = "../xianvec-core" }

async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
tokio = { workspace = true }

# Alpaca trading client — v0.30.0; no rustls feature exists upstream,
# hyper-tls is the only TLS backend offered by this crate.
apca = { workspace = true }
# num-decimal is apca's numeric type; not re-exported so we depend on it directly.
num-decimal = { version = "0.2", features = ["num-v04", "serde"], default-features = false }

# Orderly Network HTTP client — raw reqwest calls instead of orderly-connector-rs.
# orderly-connector-rs 0.4.15 pins zeroize = "=1.3.0" via its solana-sdk
# transitive dep, which conflicts with reqwest 0.13 / rustls 0.23 which need
# zeroize >= 1.7. The SDK cannot be compiled in this workspace without forking
# orderly-connector-rs to drop the Solana dependency (tracked as F19 in
# FOLLOWUPS.md). For v1, we implement the required Orderly endpoints directly
# (POST /v1/order, GET /v1/order/{id}, GET /v1/positions, GET /v1/client/holding,
# POST /v1/algo-order) as signed HTTP calls. Signing scheme: Ed25519 over
# `${timestamp}${METHOD}${path}${body}`, base64-encoded, secret decoded from
# base58 — matching the orderly-connector-rs auth module exactly.
reqwest = { workspace = true, features = ["json"] }
# ed25519-dalek 2.x uses zeroize >= 1.7, compatible with this workspace.
ed25519-dalek = { version = "2", features = ["pkcs8"] }
# base58 decoder for orderly secret keys.
bs58 = "0.5"
# base64 encoder for the Ed25519 signature.
base64 = "0.22"

[dev-dependencies]
# mockito chosen over wiremock: simpler sync setup, no async mock-server
# startup boilerplate, adequate for the four deterministic unit scenarios.
mockito = "1"
tokio = { workspace = true, features = ["rt", "macros"] }
