[package]
name        = "xianvec-harness"
description = "boundary probes (minimal v1 corpus)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name = "xianvec_harness"
path = "src/lib.rs"

[dependencies]
xianvec-core = { path = "../xianvec-core" }
xianvec-risk = { path = "../xianvec-risk" }
tracing      = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
uuid   = { workspace = true }
