[package]
name        = "xianvec-introspect"
description = "layer-level diagnostics for steering hooks"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name = "xianvec_introspect"
path = "src/lib.rs"
