[package]
name        = "xianvec-trader"
description = "Stage 2 — LLM-driven trader on neutral briefings"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name = "xianvec_trader"
path = "src/lib.rs"

[dependencies]
xianvec-core   = { path = "../xianvec-core" }
xianvec-intern = { path = "../xianvec-intern" }
serde       = { workspace = true }
serde_json  = { workspace = true }
garde       = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
reqwest     = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
