[package]
name = "xvision-agent-client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
