[package]
name        = "xvision-agent-client"
description = "JSON-RPC over Unix-socket client for the xvision-agentd Node sidecar."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
publish = false

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }  # used from Task 6 onwards
async-trait = { workspace = true }
xvision-observability = { path = "../xvision-observability" }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
xvision-engine = { path = "../xvision-engine" }
async-trait = { workspace = true }
sqlx = { workspace = true }
