[package]
name        = "xvision-cli"
description = "clap-based CLI; installed binary is xvn"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name = "xvision_cli"
path = "src/lib.rs"

[[bin]]
name = "xvn"
path = "src/main.rs"

[dependencies]
clap   = { workspace = true }
anyhow = { workspace = true }

xvision-core      = { path = "../xvision-core" }
xvision-data      = { path = "../xvision-data" }
xvision-eval      = { path = "../xvision-eval" }
xvision-intern    = { path = "../xvision-intern" }
xvision-trader    = { path = "../xvision-trader" }
xvision-risk      = { path = "../xvision-risk" }
xvision-execution = { path = "../xvision-execution" }
xvision-harness   = { path = "../xvision-harness" }
xvision-engine    = { path = "../xvision-engine" }
xvision-dashboard = { path = "../xvision-dashboard" }
ulid              = "1"
dirs              = "5"

serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
reqwest    = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true, features = ["serde", "v4"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx               = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio    = { workspace = true, features = ["rt", "macros"] }

[features]
default = []
