[package]
name        = "xvision-cli"
description = "clap-based CLI; installed binary is xvn"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name = "xvision_cli"
path = "src/lib.rs"

[[bin]]
name = "xvn"
path = "src/main.rs"

[dependencies]
clap   = { workspace = true }
anyhow = { workspace = true }

xvision-core      = { path = "../xvision-core" }
xvision-data      = { path = "../xvision-data" }
xvision-eval      = { path = "../xvision-eval" }
xvision-execution = { path = "../xvision-execution" }
xvision-engine        = { path = "../xvision-engine" }
xvision-filters       = { path = "../xvision-filters" }
xvision-dashboard     = { path = "../xvision-dashboard" }
xvision-observability = { path = "../xvision-observability" }
xvision-ipc           = { path = "../xvision-ipc" }
xvision-memory        = { path = "../xvision-memory" }
xvision-marketplace   = { path = "../xvision-marketplace" }
# Chain-backed marketplace reads (list under MARKETPLACE_DRIVER=onchain,
# show-token): contract bindings + the shared tokenURI decoder. Already in
# the dependency graph transitively via xvision-marketplace.
xvision-identity      = { path = "../xvision-identity" }
alloy             = { workspace = true }
ulid              = "1"
dirs              = "5"
blake3            = "1.5"

serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
tokio      = { workspace = true }
reqwest    = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true, features = ["serde", "v4"] }
tracing-subscriber = { workspace = true }
sqlx               = { workspace = true }

sha2     = "0.10"
tempfile = "3"

[dev-dependencies]
tokio    = { workspace = true, features = ["rt", "macros"] }

[features]
default = []
