[package]
name        = "xvision-core"
description = "types, schemas, config loader, SQLite persistence"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name = "xvision_core"
path = "src/lib.rs"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
garde      = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true }
thiserror  = { workspace = true }
sqlx       = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio    = { workspace = true, features = ["rt", "macros"] }
tempfile = "3"
