[package]
name = "xvision-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[build-dependencies]
toml  = { workspace = true }
serde = { workspace = true }

[dependencies]
xvision-core          = { path = "../xvision-core" }
xvision-engine        = { path = "../xvision-engine" }
xvision-filters       = { path = "../xvision-filters" }
xvision-memory        = { path = "../xvision-memory" }
xvision-observability = { path = "../xvision-observability" }
axum            = { version = "0.7", features = ["macros", "multipart"] }
tokio           = { workspace = true }
tower-http      = { version = "0.6", features = ["trace", "cors", "compression-full"] }
serde           = { workspace = true }
serde_json      = { workspace = true }
anyhow          = { workspace = true }
async-trait     = { workspace = true }
tokio-stream    = "0.1"
async-stream    = "0.3"
thiserror       = { workspace = true }
tracing         = { workspace = true }
rust-embed      = { version = "8", features = ["compression"] }
mime_guess      = "2"
chrono          = { workspace = true }
ulid            = { version = "1", features = ["serde"] }
# Re-declare sqlx with the `migrate` feature on top of the workspace defaults.
# The dashboard owns server-startup migration runs; the engine crate only
# defines them.
sqlx            = { workspace = true, features = ["migrate"] }
# sysinfo: PID-liveness check in the startup orphan-recovery sweep.
# The `"system"` feature is not needed; we only need `Process` + `Pid`.
sysinfo         = { version = "0.32", default-features = false, features = ["system"] }
# nix: SIGTERM delivery on Unix. Feature-gated in source via #[cfg(unix)].
nix             = { version = "0.29", default-features = false, features = ["signal", "process"] }
# sha2: SHA-256 for session token hashing in crate::auth::session.
sha2            = "0.10"
# getrandom: cryptographically random bytes for session token generation.
# Already a transitive dep via ulid; declared explicitly for clarity.
getrandom       = "0.2"

[dev-dependencies]
axum-test = "16"
tokio     = { version = "1", features = ["full", "test-util"] }
serde_json = "1"
tempfile  = "3"
chrono    = { workspace = true }
reqwest   = { workspace = true, features = ["stream"] }
futures-util = "0.3"
tower = { version = "0.5", features = ["util"] }
sqlx      = { workspace = true }
